# acr-framework

./: .gitignore  02-behavioral-policy-enforcement.md  04-execution-observability.md  06-human-authority.md  ADOPTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GOVERNANCE.md  PRE-PUSH-CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  acr-control-plane-architecture.md  acr-glossary.md  acr-implementation-guide.md  acr-nist-ai-rmf-mapping.md  acr-pillars.md  acr-runtime-architecture.md  acr-use-cases.md
.github/: PULL_REQUEST_TEMPLATE.md  (+1 more)
docs/: README.md
implementations/acr-control-plane/: .env.example  .env.production.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
implementations/acr-control-plane/deploy/k8s/base/: gateway-deployment.yaml  gateway-secret.example.yaml  kustomization.yaml
implementations/acr-control-plane/docs/: api.md  configuration.md  deployment.md  enterprise-roadmap.md  failure-load-dr-validation-2026-04-08.md  orchestrators.md  production_install.md  provenance-and-verification.md  sdk.md
implementations/acr-control-plane/docs/compliance/: README.md  control-mapping.md  evidence-package.md  external-assessment-scope.md  shared-responsibility-matrix.md  threat-model.md
implementations/acr-control-plane/examples/n8n/: README.md  acr_sensitive_action_workflow.json
implementations/acr-control-plane/examples/protected_executor/: .env.example  Dockerfile  README.md  app.py
implementations/acr-control-plane/examples/sample_agent/: README.md  agent.py
implementations/acr-control-plane/scripts/: build_compliance_package.py  generate_secrets.py  run-migrations.sh
implementations/acr-control-plane/sdks/typescript/: README.md  package.json  tsconfig.json
implementations/acr-control-plane/sdks/typescript/src/: index.ts
implementations/acr-control-plane/src/acr/: __init__.py  config.py  main.py
implementations/acr-control-plane/src/acr/common/: errors.py  oidc.py
implementations/acr-control-plane/src/acr/db/: models.py
implementations/acr-control-plane/src/acr/gateway/: models.py  router.py  spend_control.py
implementations/acr-control-plane/src/acr/pillar1_identity/: models.py  registry.py  router.py  validator.py
implementations/acr-control-plane/src/acr/pillar2_policy/: engine.py  models.py  output_filter.py
implementations/acr-control-plane/src/acr/pillar3_drift/: baseline.py  detector.py  governance.py  models.py
implementations/acr-control-plane/src/acr/pillar4_observability/: evidence.py  integrity.py  schema.py  telemetry.py
implementations/acr-control-plane/src/acr/pillar5_containment/: service.py
implementations/acr-control-plane/src/acr/pillar6_authority/: approval.py  models.py  router.py
implementations/acr-control-plane/src/acr/policy_studio/: distribution.py
implementations/acr-control-plane/src/acr/sdk/: __init__.py  client.py  errors.py  langgraph.py
implementations/acr-control-plane/tests/: conftest.py  test_authority.py  test_drift_db.py  test_drift_governance_api.py  test_enterprise_hardening.py  test_evidence.py  test_executor.py  test_gateway.py  test_identity.py  test_observability.py  test_sdk.py  test_secret_hygiene.py  test_security_and_policy_services.py
(+39 files in other folders)
